DROP TABLE reflections;
DROP TABLE document;
DROP TABLE enrollment;
DROP TABLE course;
DROP TABLE users;
DROP TABLE roles;

CREATE TABLE users (
    user_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL,
    password VARCHAR(255) NOT NULL,
    name VARCHAR(100) NOT NULL,
    role VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_users_email UNIQUE (email),
    CONSTRAINT ck_users_role CHECK (role IN ('LEARNER', 'ADMIN'))
);

CREATE TABLE lectures (
    lecture_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(255) NOT NULL,
    description TEXT,
    lecture_date DATE NOT NULL,
    start_time TIME,
    end_time TIME,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_lecture_time CHECK (end_time IS NULL OR start_time IS NULL OR end_time > start_time)
);

CREATE TABLE lecture_materials (
    material_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    lecture_id BIGINT NOT NULL,
    title VARCHAR(255) NOT NULL,
    material_type VARCHAR(20) NOT NULL,
    file_url VARCHAR(1000),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_material_type CHECK (material_type IN ('PDF', 'FILE', 'LINK')),
    CONSTRAINT fk_material_lecture FOREIGN KEY (lecture_id) REFERENCES lectures(lecture_id)
);

CREATE TABLE reflections (
    reflection_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    lecture_id BIGINT NOT NULL,
    understood TEXT,
    difficult TEXT,
    wants_to_learn TEXT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_reflection_user_lecture UNIQUE (user_id, lecture_id),
    CONSTRAINT fk_reflection_user FOREIGN KEY (user_id) REFERENCES users(user_id),
    CONSTRAINT fk_reflection_lecture FOREIGN KEY (lecture_id) REFERENCES lectures(lecture_id)
);

CREATE TABLE ai_analyses (
    analysis_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reflection_id BIGINT NOT NULL,
    understood_topics JSON,
    weak_topics JSON,
    recommended_topics JSON,
    summary TEXT,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_analysis_reflection UNIQUE (reflection_id),
    CONSTRAINT ck_analysis_status CHECK (status IN ('PENDING', 'COMPLETED', 'FAILED')),
    CONSTRAINT fk_analysis_reflection FOREIGN KEY (reflection_id) REFERENCES reflections(reflection_id)
);

CREATE TABLE personalized_reviews (
    review_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    analysis_id BIGINT NOT NULL,
    title VARCHAR(255) NOT NULL,
    focus_topics JSON,
    content JSON,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    completed_at TIMESTAMP,
    CONSTRAINT uk_review_analysis UNIQUE (analysis_id),
    CONSTRAINT ck_review_status CHECK (status IN ('NOT_STARTED', 'IN_PROGRESS', 'COMPLETED')),
    CONSTRAINT fk_review_analysis FOREIGN KEY (analysis_id) REFERENCES ai_analyses(analysis_id)
);

CREATE TABLE quizzes (
    quiz_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    review_id BIGINT NOT NULL,
    title VARCHAR(255) NOT NULL,
    questions JSON NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_quiz_review UNIQUE (review_id),
    CONSTRAINT fk_quiz_review FOREIGN KEY (review_id) REFERENCES personalized_reviews(review_id)
);

CREATE TABLE quiz_attempts (
    attempt_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    quiz_id BIGINT NOT NULL,
    user_id BIGINT NOT NULL,
    answers JSON,
    score INTEGER,
    correct_count INTEGER NOT NULL DEFAULT 0,
    total_count INTEGER NOT NULL DEFAULT 0,
    completed_at TIMESTAMP,
    CONSTRAINT ck_attempt_score CHECK (score IS NULL OR score BETWEEN 0 AND 100),
    CONSTRAINT fk_attempt_quiz FOREIGN KEY (quiz_id) REFERENCES quizzes(quiz_id),
    CONSTRAINT fk_attempt_user FOREIGN KEY (user_id) REFERENCES users(user_id)
);

CREATE TABLE concept_mastery (
    mastery_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    concept_name VARCHAR(150) NOT NULL,
    level INTEGER NOT NULL,
    score INTEGER,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_user_concept UNIQUE (user_id, concept_name),
    CONSTRAINT ck_mastery_level CHECK (level BETWEEN 1 AND 4),
    CONSTRAINT ck_mastery_score CHECK (score IS NULL OR score BETWEEN 0 AND 100),
    CONSTRAINT fk_mastery_user FOREIGN KEY (user_id) REFERENCES users(user_id)
);

CREATE INDEX idx_material_lecture ON lecture_materials(lecture_id);
CREATE INDEX idx_attempt_user ON quiz_attempts(user_id);

INSERT INTO users (email, password, name, role)
VALUES
    ('admin@example.com', '{noop}demo1234', '교육 운영자', 'ADMIN'),
    ('learner@example.com', '{noop}demo1234', '데모 교육생', 'LEARNER');

INSERT INTO lectures (title, description, lecture_date, start_time, end_time)
VALUES
    ('Spring Boot REST API', 'Controller, Service, Repository로 REST API를 설계합니다.', CURRENT_DATE, '09:00:00', '12:00:00'),
    ('React 상태 관리', 'useState와 props를 이용한 상태 흐름을 학습합니다.', CURRENT_DATE, '13:00:00', '16:00:00');

INSERT INTO lecture_materials (lecture_id, title, material_type, file_url)
VALUES
    (1, 'Spring Boot REST API 강의자료', 'PDF', '/materials/spring-rest-api.pdf'),
    (1, 'Spring 공식 가이드', 'LINK', 'https://spring.io/guides'),
    (2, 'React 상태 관리 강의자료', 'PDF', '/materials/react-state.pdf');
