Table users {
  user_id bigint [pk, increment]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  name varchar(100) [not null]
  role varchar(20) [not null, note: 'LEARNER, ADMIN']
  created_at timestamp [not null]
}

Table lectures {
  lecture_id bigint [pk, increment]
  title varchar(255) [not null]
  description text
  lecture_date date [not null]
  start_time time
  end_time time
  created_at timestamp [not null]
}

Table lecture_materials {
  material_id bigint [pk, increment]
  lecture_id bigint [not null]
  title varchar(255) [not null]
  material_type varchar(20) [not null, note: 'PDF, FILE, LINK']
  file_url varchar(1000)
  created_at timestamp [not null]
}

Table reflections {
  reflection_id bigint [pk, increment]
  user_id bigint [not null]
  lecture_id bigint [not null]
  understood text
  difficult text
  wants_to_learn text
  created_at timestamp [not null]
  indexes { (user_id, lecture_id) [unique] }
}

Table ai_analyses {
  analysis_id bigint [pk, increment]
  reflection_id bigint [not null, unique]
  understood_topics json
  weak_topics json
  recommended_topics json
  summary text
  status varchar(20) [not null, note: 'PENDING, COMPLETED, FAILED']
  created_at timestamp [not null]
}

Table personalized_reviews {
  review_id bigint [pk, increment]
  analysis_id bigint [not null, unique]
  title varchar(255) [not null]
  focus_topics json
  content json
  status varchar(20) [not null, note: 'NOT_STARTED, IN_PROGRESS, COMPLETED']
  created_at timestamp [not null]
  completed_at timestamp
}

Table quizzes {
  quiz_id bigint [pk, increment]
  review_id bigint [not null, unique]
  title varchar(255) [not null]
  questions json [not null]
  created_at timestamp [not null]
}

Table quiz_attempts {
  attempt_id bigint [pk, increment]
  quiz_id bigint [not null]
  user_id bigint [not null]
  answers json
  score integer
  correct_count integer [not null, default: 0]
  total_count integer [not null, default: 0]
  completed_at timestamp
}

Table concept_mastery {
  mastery_id bigint [pk, increment]
  user_id bigint [not null]
  concept_name varchar(150) [not null]
  level integer [not null, note: '1: 인지, 2: 이해, 3: 적용, 4: 구현']
  score integer
  updated_at timestamp [not null]
  indexes { (user_id, concept_name) [unique] }
}

Ref: lecture_materials.lecture_id > lectures.lecture_id
Ref: reflections.user_id > users.user_id
Ref: reflections.lecture_id > lectures.lecture_id
Ref: ai_analyses.reflection_id > reflections.reflection_id
Ref: personalized_reviews.analysis_id > ai_analyses.analysis_id
Ref: quizzes.review_id > personalized_reviews.review_id
Ref: quiz_attempts.quiz_id > quizzes.quiz_id
Ref: quiz_attempts.user_id > users.user_id
Ref: concept_mastery.user_id > users.user_id
